handle ticket update